OS-173: Fixes the breadcrumbs z-index for the locations page.

--- a/themes/openy_themes/openy_carnation/src/scss/component/_breadcrumbs.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/component/_breadcrumbs.scss
@@ -8,7 +8,7 @@ $breadcrumbColorsLength: length($breadcrumbColors);
 .breadcrumbs-wrapper {
   position: absolute;
   bottom: -25px;
-  z-index: 2;
+  z-index: 1000;
   left: 0;
   right: 0;
 }
@@ -18,7 +18,6 @@ $breadcrumbColorsLength: length($breadcrumbColors);
   display: flex;
 
   li {
-
     span,
     a {
       @include cachet();
